samples/_failures_safe/1761088778_76453d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f82771c7.c: In function ‘main’:
./samples/SAFE/__tmp_f82771c7.c:158:87: error: expected ‘)’ at end of input
  158 |             fprintf(stderr, "Lexical error at line %d, column %d\n", token.line, token
      |                    ~                                                                  ^
      |                                                                                       )
./samples/SAFE/__tmp_f82771c7.c:158:13: error: expected declaration or statement at end of input
  158 |             fprintf(stderr, "Lexical error at line %d, column %d\n", token.line, token
      |             ^~~~~~~
./samples/SAFE/__tmp_f82771c7.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f82771c7.c:158:13: error: expected declaration or statement at end of input
